# ClearComms

./: .gitignore  CLEANUP_NOTES.txt  LICENSE.md  README.md  package-lock.json  package.json  tmpclaude-2334-cwd
.github/: DOCUMENTATION.md  LICENSE.md  README.md  copilot-instructions.md
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/black/: icon.icns
src-tauri/icons/white/: icon.icns
src-tauri/src/: lib.rs  main.rs  native_menu.rs  window_utils.rs
src-tauri/src/audio_management/: mod.rs
src-tauri/src/hardware_input/: mod.rs
src-tauri/src/lvar_input/: mod.rs
src-tauri/src/simvar_input/: mod.rs
src/lib/components/: ApplicationChannel.svelte  BootScreen.svelte  ButtonAddApplication.svelte  ButtonExpandable.svelte  ButtonPill.svelte  ButtonRound.svelte  Dock.svelte  Footer.svelte  ListOption.svelte  Mixer.svelte  SettingsOption.svelte  VolumeSlider.svelte  index.ts
src/lib/stores/: audioStore.ts  hardwareStore.ts  index.ts  uiStore.ts
src/lib/types/: index.ts
src/routes/: +page.svelte
src/routes/close/: +page.svelte
